--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <canvas id="canvas" width="900" height="540"></canvas>
     </div
   <div id="controls">
-    <button>rien</button>
+    <button class="button">rien</button>
     <button class="button" onclick="setMode('player')">Ajouter Joueur</button>
     <button class="button" onclick="setMode('target')">Ajouter Objectif</button>
     <button class="button" onclick="setMode('hill')">Ajouter Colline</button>
