--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
   <div id="canvas-container">
     <canvas id="canvas" width="900" height="540"></canvas>
-    </div
+  </div>
   <div id="controls">
     <button class="button" onclick="setMode('player')">Ajouter Joueur</button>
     <button class="button" onclick="setMode('target')">Ajouter Objectif</button>
